# biblioteka-sem

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
include/: Class1.h  Class2.h  Class3.h
src/: Class1.cpp  Class2.cpp  Class3.cpp  main.cpp
